<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ItemProduto">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="129dp"
            android:layout_height="43dp"
            android:text="@string/nome"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/editNome"
            app:layout_constraintHorizontal_bias="0.69"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42000002" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:text="@string/marca"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/editMarca"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="129dp"
            android:layout_height="44dp"
            android:text="@string/quantidade"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="116dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="129dp"
            android:layout_height="45dp"
            android:text="Fabricação"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="160dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="129dp"
            android:layout_height="38dp"
            android:text="@string/validade"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="205dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:text="Notificação"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="243dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:capitalize="none"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editMarca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editMarca"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:autofillHints=""
            android:capitalize="none"
            android:ems="10"
            android:hint="@string/marca"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editQuantidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/editNome" />

        <EditText
            android:id="@+id/editQuantidade"
            android:layout_width="198dp"
            android:layout_height="44dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/quantidade"
            android:inputType="number"
            tools:layout_editor_absoluteX="183dp"
            tools:layout_editor_absoluteY="116dp" />

        <EditText
            android:id="@+id/editFabricacao"
            android:layout_width="198dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fabrica_o"
            android:inputType="date"
            tools:layout_editor_absoluteX="183dp"
            tools:layout_editor_absoluteY="160dp" />

        <EditText
            android:id="@+id/editValidade"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/validade"
            android:inputType="date"
            tools:layout_editor_absoluteX="183dp"
            tools:layout_editor_absoluteY="205dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdEditQuinze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="15 Dias" />

            <RadioButton
                android:id="@+id/rdEditTrinta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="90 Dias" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="198dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="183dp"
            tools:layout_editor_absoluteY="297dp">

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Salvar"
                tools:text="Salvar" />

            <Button
                android:id="@+id/btnExcluir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Excluir"
                tools:text="Excluir" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>